<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_favoris"
            android:icon="@mipmap/ic_favorite_black_24dp"
            android:title="@string/nav_Favoris" />
        <item
            android:id="@+id/nav_pharms_list"
            android:icon="@mipmap/ic_dns_black_24dp"
            android:title="@string/nav_Pharm_list" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@mipmap/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>