<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.rayhane.dzpharmz.View.Activities.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/logo"
            android:layout_weight="0.5"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/user_email"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:hint="@string/login_email"
            android:typeface="sans"
            android:fontFamily="sans-serif" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/user_password"
            android:layout_weight="0.5"
            tools:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:hint="@string/login_password"

            android:typeface="sans"
            android:fontFamily="sans-serif" />

        <Button
            android:text="@string/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:typeface="sans"
            android:fontFamily="sans-serif"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            android:elevation="3dp"
            style="@style/Widget.AppCompat.Button"
            android:fadingEdge="horizontal" />

        <TextView
            android:text="@string/login_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_account_label"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:onClick="goSignupActivity" />
    </LinearLayout>
</ScrollView>
